Adding venv to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Python gitignore template taken from: 
 # https://github.com/github/gitignore/blob/master/Python.gitignore
 
+venv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
